correcting slider overflow

--- a/index.css
+++ b/index.css
@@ -175,7 +175,7 @@ header {
       justify-content: space-between;
       flex-direction: row;
       width: 100%;
-      margin: 50px 0;
+      margin: 50px;
     }
 
     .projects__section img{
@@ -224,6 +224,12 @@ header {
       display: flex;
       align-items: center;
       margin: 50px auto;
+      
+    }
+
+    .project__exemples {
+      overflow: hidden;
+      box-sizing: border-box;
     }
     
 .title {
@@ -417,7 +423,13 @@ form {
 }
 input {
     position: absolute;
-    visibility: hidden;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    
+  }
+  input[type="radio"]{
+    border-width: 0;
   }
 
 
